--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <title>Live HTML Preview with Export</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.9/codemirror.min.css" />
   <style>
@@ -26,7 +25,6 @@
       padding: 12px;
       color: white;
       flex-shrink: 0;
-      flex-wrap: wrap;
     }
     button {
       padding: 8px 18px;
@@ -47,13 +45,12 @@
       display: flex;
       overflow: hidden;
       position: relative;
-      flex-direction: row;
     }
     .CodeMirror {
       width: 50%;
       height: 100%;
       background: #eee;
-      font-size: 16px; /* Important to prevent zoom */
+      font-size: 16px;
       line-height: 1.5;
     }
     iframe {
@@ -83,18 +80,9 @@
     #bottom a:hover {
       text-decoration: underline;
     }
+    /* Hidden file input */
     #fileInput {
       display: none;
-    }
-
-    @media (max-width: 768px) {
-      #main {
-        flex-direction: column;
-      }
-      .CodeMirror, iframe {
-        width: 100%;
-        height: 50%;
-      }
     }
   </style>
 </head>
@@ -213,6 +201,7 @@ ${content}
       editor.redo();
     }
 
+    // Handle file import
     fileInput.addEventListener('change', () => {
       const file = fileInput.files[0];
       if (!file) return;
@@ -231,6 +220,7 @@ ${content}
       reader.readAsText(file);
     });
 
+    // Initialize CodeMirror editor
     const editor = CodeMirror.fromTextArea(input, {
       mode: "htmlmixed",
       lineNumbers: true,
@@ -248,14 +238,16 @@ ${content}
       }
     });
 
+    // Placeholder manual implementation
     function addPlaceholder(cm, text) {
       const wrapper = cm.getWrapperElement();
+
       const placeholderDiv = document.createElement("div");
       placeholderDiv.style.position = "absolute";
       placeholderDiv.style.zIndex = "5";
       placeholderDiv.style.color = "#999";
       placeholderDiv.style.pointerEvents = "none";
-      placeholderDiv.style.left = "50px";
+      placeholderDiv.style.left = "50px";  // avoid gutter
       placeholderDiv.style.top = "8px";
       placeholderDiv.style.fontFamily = "monospace";
       placeholderDiv.style.fontSize = "16px";
@@ -265,7 +257,11 @@ ${content}
       wrapper.appendChild(placeholderDiv);
 
       function update() {
-        placeholderDiv.style.display = cm.getValue().length === 0 ? "block" : "none";
+        if (cm.getValue().length === 0) {
+          placeholderDiv.style.display = "block";
+        } else {
+          placeholderDiv.style.display = "none";
+        }
       }
 
       cm.on("change", update);
