--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
   </div>
 
   <div id="main">
-    <textarea id="htmlInput" placeholder="Type or paste your HTML code here..."></textarea>
+    <textarea id="htmlInput" placeholder="Type or paste your HTML/CSS/JAVA code here..."></textarea>
     <iframe id="output"></iframe>
   </div>
 
