--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
   </div>
 
   <div id="main">
-    <textarea id="htmlInput" placeholder="Type or paste your HTML/CSS/JAVA code here..."></textarea>
+    <textarea id="htmlInput" placeholder="Type or paste your HTML code here..."></textarea>
     <iframe id="output"></iframe>
   </div>
 
@@ -268,7 +268,7 @@ ${content}
       update();
     }
 
-    addPlaceholder(editor, "Type or paste your HTML code here...");
+    addPlaceholder(editor, "Type or paste your HTMLHTML/CSS/JAVA code here...");
 
     editor.on("change", updatePreview);
 
