--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@ ${content}
       update();
     }
 
-    addPlaceholder(editor, "Type or paste your HTMLHTML/CSS/JAVA code here...");
+    addPlaceholder(editor, "Type or paste your HTML/CSS/JAVA code here...");
 
     editor.on("change", updatePreview);
 
